--- a/Notebooks/equations_used.ipynb
+++ b/Notebooks/equations_used.ipynb
@@ -230,7 +230,7 @@
     "\\end{equation}\n",
     "\n",
     "\\begin{equation} \n",
-    "|p| = \\sum^{T}_{i = S}sum^{T}_{j = S}P_{ij}W_{ij},  i \\neq j                                                      \n",
+    "|p| = \\sum^{T}_{i = S}\\sum^{T}_{j = S}P_{ij}W_{ij},  i \\neq j                                                      \n",
     "\\end{equation}\n",
     "\n",
     "\n",
